--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "webpack-merge": "^4.1.4",
-    "webpack": "^4.27.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "babel-loader": "^8.0.4",
@@ -25,7 +22,9 @@
     "ora": "^3.0.0",
     "rimraf": "^2.6.2",
     "semver": "^5.6.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "webpack": "^4.27.1",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
