--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "babel-loader": "^8.0.4",
+    "babel-preset-env": "^7.0.0-beta.3",
     "chalk": "^2.4.1",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
